Revision history for Perl extension Template::Plugin::Filter::Minify::JavaScript.

0.91  Tue Oct 26 2009
    - add signature test

0.90  Thu Oct 15 2009
    - initial version