@@ -1,6 +1,2 @@
-blib
-pm_to_blib
-Makefile
-Makefile.old
-*.swp
-*.bak
+Template-Plugin-Filter-Minify-JavaScript-*
+\.build
