@@ -1,9 +1,0 @@
-Changes
-lib/Template/Plugin/Filter/Minify/JavaScript.pm
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-README
-t/compile.t
-t/minify.t
-t/signature.t
