@@ -1,0 +1,9 @@
+name    = Template-Plugin-Filter-Minify-JavaScript
+version = 0.91
+author  = Michael Schout <mschout@cpan.org>
+license = Perl_5
+copyright_holder = Michael Schout
+
+[@MSCHOUT]
+[Prereq]
+Template = 2.0
