@@ -1,4 +1,7 @@
-Revision history for Perl extension Template::Plugin::Filter::Minify::JavaScript.
+Revision history for Template::Plugin::Filter::Minify::JavaScript
+
+{{$NEXT}}
+    - use Dist::Zilla
 
 0.91  Tue Oct 26 2009
     - add signature test
